species learning working now

--- a/sup_learning_AEB_draft.ipynb
+++ b/sup_learning_AEB_draft.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,9 @@
     "    print('Loading data...')\n",
     "\n",
     "    data_normalized, labels, rskf = load_spAB.load_single_disease(data_set, n_splits, n_repeats, precomputed_kfolds=False)\n",
-    "\n",
+    "    \n",
+    "    print(\"Dimensions of normalized species cnts: \" + str(data_normalized.shape))\n",
+    "    print(\"Dimensions of labels: \" + str(labels.shape))\n",
     "    # rskf = repeated stratified k fold. This contains all the kfold-by-iteration combos. \n",
     "\n",
     "\n",
@@ -267,42 +269,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MetaHIT\n",
-      "LOADED DATASET MetaHIT: 110 SAMPLES\n",
-      "Qin_et_al\n",
-      "LOADED DATASET Qin_et_al: 271 SAMPLES\n",
-      "Zeller_2014\n",
-      "LOADED DATASET Zeller_2014: 121 SAMPLES\n",
-      "LiverCirrhosis\n",
-      "LOADED DATASET LiverCirrhosis: 232 SAMPLES\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Just from when I was making sure species loader still worked\n",
-    "data_sets_to_use = [\n",
-    "    [['MetaHIT'], ['MetaHIT']],\n",
-    "    [['Qin_et_al'], ['Qin_et_al']],\n",
-    "    [['Zeller_2014'], ['Zeller_2014']],\n",
-    "    [['LiverCirrhosis'], ['LiverCirrhosis']]\n",
-    "   ]\n",
+    "# making sure loader is working\n",
     "\n",
-    "for data_set in data_sets_to_use:\n",
-    "    data_set = data_set[0]\n",
-    "    species_cnts, labelz, feats = load_spAB.load_species(data_set)\n",
-    "    print(\"LOADED DATASET \" + str(data_set[0]) + \": \" + str(len(species_cnts)) + \" SAMPLES\")"
+    "data_set = ['MetaHIT']\n",
+    "species_cnts, labelz, feats = load_spAB.load_species(data_set)\n",
+    "print(\"LOADED DATASET \" + str(data_set) + \": \" + str(len(species_cnts)) + \" SAMPLES\")\n",
+    "\n",
+    "# Checking the data\n",
+    "np.count_nonzero(species_cnts==0, axis = 1) # a lot of nonzeros\n",
+    "np.any(np.isnan(species_cnts)) # returns False\n",
+    "np.all(np.isfinite(species_cnts)) # returns True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +305,7 @@
      "text": [
       "Parameters being tested:\n",
       "MetaHIT\n",
-      "Normalize input? True\n",
+      "Normalize input? False\n",
       "Encoding dim: 8\n",
       "Encoded activation: sigmoid\n",
       "Input dropout percent: 0\n",
@@ -325,6 +319,8 @@
       "\n",
       "Loading data...\n",
       "MetaHIT\n",
+      "Dimensions of normalized species cnts: (110, 3302)\n",
+      "Dimensions of labels: (110,)\n",
       "Iteration 0...\n"
      ]
     },
@@ -332,32 +328,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/pollard/home/abustion/deep_learning_microbiome/scripts/stats_utils_AEB_110718.py:27: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  x_train = (x_train - sample_mean) / sample_std\n",
-      "/pollard/home/abustion/deep_learning_microbiome/scripts/stats_utils_AEB_110718.py:27: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  x_train = (x_train - sample_mean) / sample_std\n",
-      "/pollard/home/abustion/deep_learning_microbiome/scripts/stats_utils_AEB_110718.py:29: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  x_test = (x_test - sample_mean) / sample_std\n",
-      "/pollard/home/abustion/deep_learning_microbiome/scripts/stats_utils_AEB_110718.py:29: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  x_test = (x_test - sample_mean) / sample_std\n"
+      "/pollard/home/abustion/miniconda3/envs/DL_1118/lib/python3.6/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/pollard/home/abustion/miniconda3/envs/DL_1118/lib/python3.6/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     },
     {
-     "ename": "ValueError",
-     "evalue": "Input contains NaN, infinity or a value too large for dtype('float32').",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-a5528c4017d7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mconfig_dict\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfig_file_AEB\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconfig\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#for data_set in data_sets_to_use:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mparse_config_and_run\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconfig_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutFile\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"summary_statistics_11718.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-12-c173752fc5c0>\u001b[0m in \u001b[0;36mparse_config_and_run\u001b[0;34m(config_dict, outFile)\u001b[0m\n\u001b[1;32m    161\u001b[0m                                                                       \u001b[0mplot_iteration\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m                                                                       \u001b[0mgraph_dir\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 163\u001b[0;31m                                                                       outFile)\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-12-c173752fc5c0>\u001b[0m in \u001b[0;36mrun_model\u001b[0;34m(data_set, norm_input, encoding_dim, encoded_activation, input_dropout_pct, dropout_pct, num_epochs, batch_size, n_splits, n_repeats, compute_informative_features, plot_iteration, graph_dir, outFile)\u001b[0m\n\u001b[1;32m     74\u001b[0m         \u001b[0;31m################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0;31m# Store the results of this fold in aggregated_statistics\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m         \u001b[0maggregated_statistics\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstats_utils_AEB_110718\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_summary_statistics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhistory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maggregated_statistics\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_repeat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;31m# could  plot everything (roc, accuracy vs epoch, loss vs epoch, confusion matrix, precision recall) for each fold, but this will produce a lot of graphs.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/deep_learning_microbiome/scripts/stats_utils_AEB_110718.py\u001b[0m in \u001b[0;36mcompute_summary_statistics\u001b[0;34m(y_test, y_pred, history, aggregated_statistics, n_repeat)\u001b[0m\n\u001b[1;32m     93\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mcompute_summary_statistics\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhistory\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maggregated_statistics\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_repeat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 95\u001b[0;31m     \u001b[0mfpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthresholds\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mroc_curve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     96\u001b[0m     \u001b[0my_pred_rounded\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0my_pred\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0.5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     97\u001b[0m     \u001b[0mconf_mat\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconfusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred_rounded\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/DL_1118/lib/python3.6/site-packages/sklearn/metrics/ranking.py\u001b[0m in \u001b[0;36mroc_curve\u001b[0;34m(y_true, y_score, pos_label, sample_weight, drop_intermediate)\u001b[0m\n\u001b[1;32m    611\u001b[0m     \"\"\"\n\u001b[1;32m    612\u001b[0m     fps, tps, thresholds = _binary_clf_curve(\n\u001b[0;32m--> 613\u001b[0;31m         y_true, y_score, pos_label=pos_label, sample_weight=sample_weight)\n\u001b[0m\u001b[1;32m    614\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    615\u001b[0m     \u001b[0;31m# Attempt to drop thresholds corresponding to points in between and\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/DL_1118/lib/python3.6/site-packages/sklearn/metrics/ranking.py\u001b[0m in \u001b[0;36m_binary_clf_curve\u001b[0;34m(y_true, y_score, pos_label, sample_weight)\u001b[0m\n\u001b[1;32m    396\u001b[0m     \u001b[0my_score\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolumn_or_1d\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    397\u001b[0m     \u001b[0massert_all_finite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 398\u001b[0;31m     \u001b[0massert_all_finite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_score\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    399\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    400\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0msample_weight\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/DL_1118/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36massert_all_finite\u001b[0;34m(X, allow_nan)\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0mallow_nan\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0mbool\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     67\u001b[0m     \"\"\"\n\u001b[0;32m---> 68\u001b[0;31m     \u001b[0m_assert_all_finite\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0msp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0missparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mallow_nan\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     69\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     70\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda3/envs/DL_1118/lib/python3.6/site-packages/sklearn/utils/validation.py\u001b[0m in \u001b[0;36m_assert_all_finite\u001b[0;34m(X, allow_nan)\u001b[0m\n\u001b[1;32m     54\u001b[0m                 not allow_nan and not np.isfinite(X).all()):\n\u001b[1;32m     55\u001b[0m             \u001b[0mtype_err\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'infinity'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mallow_nan\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;34m'NaN, infinity'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg_err\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype_err\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Input contains NaN, infinity or a value too large for dtype('float32')."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1...\n",
+      "Aggregating statistics across iterations and printing/plotting...\n",
+      "Saving summary statistics to file /pollard/home/abustion/deep_learning_microbiome/analysis/summary_statistics_11718.txt\n"
      ]
     }
    ],
