--- a/NMF_debugged.ipynb
+++ b/NMF_debugged.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import numpy as np\n",
     "\n",
     "#outside functions\n",
-    "import load_kmer_cnts_pasolli_jf\n",
+    "import load_kmer_cnts_jf\n",
     "\n",
     "#data\n",
     "from sklearn.utils import shuffle\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1294,7 +1294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
