--- a/sup_learning_AEB_draft.ipynb
+++ b/sup_learning_AEB_draft.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib\n",
-    "matplotlib.use('Agg') # this suppresses the console for plotting\n",
+    "#matplotlib.use('Agg') # this suppresses the console for plotting\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,17 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.layers import Input, Dense\n",
     "from keras.models import Model\n",
@@ -76,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,58 +288,367 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parameters being tested:\n",
-      "MetaHIT\n",
-      "Normalize input? False\n",
-      "Encoding dim: 8\n",
-      "Encoded activation: sigmoid\n",
-      "Input dropout percent: 0\n",
-      "Dropout percent: 0\n",
-      "Num epochs: 400\n",
-      "Batch size: 16\n",
-      "n_splits (k-folds): 10\n",
-      "n_repeats (iterations): 5\n",
-      "Compute infromative features with Shap? False\n",
-      "Plots for each iteration? False\n",
-      "\n",
-      "Loading data...\n",
-      "MetaHIT\n",
-      "Dimensions of normalized species cnts: (110, 3302)\n",
-      "Dimensions of labels: (110,)\n",
-      "Iteration 0...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/pollard/home/abustion/miniconda3/envs/DL_1118/lib/python3.6/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n",
-      "/pollard/home/abustion/miniconda3/envs/DL_1118/lib/python3.6/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
-      "  'precision', 'predicted', average, warn_for)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration 1...\n",
-      "Aggregating statistics across iterations and printing/plotting...\n",
-      "Saving summary statistics to file /pollard/home/abustion/deep_learning_microbiome/analysis/summary_statistics_11718.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "config_dict=config_file_AEB.config\n",
     "#for data_set in data_sets_to_use:\n",
     "parse_config_and_run(config_dict, outFile=\"summary_statistics_11718.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set='MetaHIT'\n",
+    "print('Loading data...')\n",
+    "\n",
+    "data_normalized, labels, rskf = load_spAB.load_single_disease(data_set, n_splits=10, n_repeats=5, precomputed_kfolds=False)\n",
+    "#data_normalized = data_normalized[:, ~np.all(data_normalized == 0, axis=0)]    \n",
+    "print(\"Dimensions of normalized species cnts: \" + str(data_normalized.shape))\n",
+    "print(\"Dimensions of labels: \" + str(labels.shape))\n",
+    "\n",
+    "rskf = list(rskf)\n",
+    "\n",
+    "for n_repeat in range(0,len(rskf[0])):\n",
+    "    train_idx = rskf[0][n_repeat]\n",
+    "    test_idx = rskf[1][n_repeat]\n",
+    "    x_train, y_train = data_normalized[train_idx], labels[train_idx]\n",
+    "    x_test, y_test = data_normalized[test_idx], labels[test_idx]\n",
+    "    \n",
+    "    #standardize the data, mean=0, std=1\n",
+    "    #x_train, x_test= stats_utils_AEB_110718.standardize_data(x_train, x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set=['MetaHIT']\n",
+    "allowed_labels=['0','1']\n",
+    "species_cnts, labels, features = load_spAB.load_species(data_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get rid of features that are zero for all of the samples\n",
+    "species_cnts = species_cnts[:, ~np.all(species_cnts == 0, axis=0)]\n",
+    "\n",
+    "\n",
+    "labels=np.asarray(labels)\n",
+    "labels=labels.astype(np.int)\n",
+    "\n",
+    "data_normalized = species_cnts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rskf = RepeatedStratifiedKFold(n_splits=5, n_repeats=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rskf = rskf.split(data_normalized, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(rskf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rskf = list(rskf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "range(0,len(rskf[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for n_repeat in range(0,len(rskf[0])):\n",
+    "    train_idx = rskf[0][n_repeat]\n",
+    "    test_idx = rskf[1][n_repeat]\n",
+    "    x_train, y_train = data_normalized[train_idx], labels[train_idx]\n",
+    "    x_test, y_test = data_normalized[test_idx], labels[test_idx]\n",
+    "    \n",
+    "    sample_mean = x_train.mean(axis=0)\n",
+    "    sample_std = x_train.std(axis=0)\n",
+    "    \n",
+    "    #x_train = (x_train - sample_mean) / sample_std\n",
+    "    \n",
+    "    #x_test = (x_test - sample_mean) / sample_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rskf[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rskf[0][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rskf[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test first repeat\n",
+    "len(rskf[1][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.count_nonzero(x_train==0, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.count_nonzero(sample_mean==0, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.count_nonzero(sample_std==0, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Plots for blog post"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set=['MetaHIT']\n",
+    "allowed_labels=['0','1']\n",
+    "species_cnts, labels, features = load_spAB.load_species(data_set)\n",
+    "    \n",
+    "# get rid of features that are zero for a fraction of the samples\n",
+    "species_cnts = species_cnts[:, ~np.all(species_cnts == 0, axis=0)]\n",
+    "\n",
+    "labels=np.asarray(labels)\n",
+    "labels=labels.astype(np.int)\n",
+    "\n",
+    "data_normalized = species_cnts\n",
+    "\n",
+    "rskf = RepeatedStratifiedKFold(n_splits=10, n_repeats=5)\n",
+    "rskf = rskf.split(data_normalized, labels)\n",
+    "rskf = list(rskf)\n",
+    "\n",
+    "for n_repeat in range(0,len(rskf[0])):\n",
+    "    train_idx = rskf[0][n_repeat]\n",
+    "    test_idx = rskf[1][n_repeat]\n",
+    "    x_train, y_train = data_normalized[train_idx], labels[train_idx]\n",
+    "    x_test, y_test = data_normalized[test_idx], labels[test_idx]\n",
+    "    \n",
+    "    #x_train, x_test = stats_utils_AEB_110718.standardize_data(x_train, x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_normalized.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zeros = list(np.count_nonzero(data_normalized==0, axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prevs = np.count_nonzero(data_normalized==0, axis=0)\n",
+    "\n",
+    "prevs2 = [i for i in zeros if i >= 100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import Image\n",
+    "%config InlineBackend.figure_format = 'svg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting hist without kde\n",
+    "ax = sns.distplot(prevs, kde=False)\n",
+    "# Labels\n",
+    "plt.title(\"MetaHIT species data\")\n",
+    "plt.xlabel(\"Number of zero entries\\n(note: there are 110 samples)\")\n",
+    "plt.ylabel(\"Taxa (i.e. column) count\")\n",
+    "\n",
+    "# plot the zoomed portion\n",
+    "sub_axes1 = plt.axes([.25, .5, .38, .3]) \n",
+    "sns.distplot(prevs2,kde=False)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.any(np.isnan(x_train))) # returns False\n",
+    "print(np.all(np.isfinite(x_train))) # returns True\n",
+    "\n",
+    "print(np.any(np.isnan(x_test))) # returns False\n",
+    "print(np.all(np.isfinite(x_test))) # returns True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test = stats_utils_AEB_110718.standardize_data(x_train, x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covs = data_normalized.std(axis=0) / data_normalized.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "covs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(covs, bins=20, kde=False)\n",
+    "plt.title(\"Coefficient of Variation\\n(MetaHIT dataset)\")\n",
+    "plt.xlabel(\"COV score\")\n",
+    "plt.ylabel(\"No. features (taxa)\")\n",
+    "plt.show()"
    ]
   },
   {
