updated pickled files

--- a/NMF_on_all_data.ipynb
+++ b/NMF_on_all_data.ipynb
@@ -278,6 +278,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataz = pd.read_pickle(\"/pollard/home/abustion/deep_learning_microbiome/data_AEB/NMF_on_all_data/before_NMF_no_norm.pickle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factors=3\n",
+    "for n in range(2, factors + 1):\n",
+    "    data_NMF = stats_utils_AEB.NMF_factor(dataz, kmer_size, n_components = int(n), \n",
+    "                                                     title=(\"ALL_DATA_with_norm_\" + str(kmer_size) + \"mers\" \n",
+    "                                                            + str(n) + \"factors\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
