--- a/NMF_on_all_data.ipynb
+++ b/NMF_on_all_data.ipynb
@@ -235,7 +235,9 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "KeyboardInterrupt",
@@ -260,7 +262,9 @@
     "for n in range(2, factors + 1):\n",
     "    data_NMF = stats_utils_AEB.NMF_factor(data, kmer_size, n_components = int(n), \n",
     "                                                     title=(\"ALL_DATA_no_norm_\" + str(kmer_size) + \"mers\" \n",
-    "                                                            + str(n) + \"factors\"))"
+    "                                                            + str(n) + \"factors\"))\n",
+    "    data_NMF.to_pickle(\"/pollard/home/abustion/deep_learning_microbiome/data_AEB/NMF_on_all_data/after_NMF_no_norm_\" +\n",
+    "                       str(n) + \"factors.pickle\")"
    ]
   },
   {
@@ -303,7 +307,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n=20\n",
+    "data_normalized = normalize(kmer_cnts, axis = 1, norm = 'l1')\n",
+    "data_normalized = stats_utils_AEB.NMF_factor(data_normalized, kmer_size, n_components = int(n), \n",
+    "                                                     title=(str(data_set) + str(kmer_size) + \"mers\" \n",
+    "                                                            + str(n) + \"factors\"))\n",
+    "data_normalized, labels = shuffle(data_normalized, labelz, random_state=0)\n",
+    "x = data_normalized\n",
+    "y = labels"
+   ]
   }
  ],
  "metadata": {
